# bookphotocorr

./: BookPhotoCorr.kdev4  CMakeLists.txt  cut.cpp  main.cpp
