project(bookphotocorr)
find_package(SDL REQUIRED)
include_directories(${SDL_INCLUDE_DIR})
add_executable(batchcutter cut.cpp)
add_executable(bookphotocorr main.cpp)
target_link_libraries(bookphotocorr IL ILU)
target_link_libraries(batchcutter ${SDL_LIBRARY} IL ILU)
install(TARGETS bookphotocorr RUNTIME DESTINATION bin)
install(TARGETS batchcutter RUNTIME DESTINATION bin)